--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "tsc -p tsconfig.lib.json && vite build",
+    "build": "vite build && tsc -p tsconfig.lib.json",
     "build:types": "tsc -p tsconfig.lib.json --emitDeclarationOnly",
     "preview": "vite preview",
     "lint": "eslint .",
