--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "private": false,
   "version": "0.1.9",
   "type": "module",
-  "description": "A modern React UI component library with Tailwind CSS",
+  "description": "A modern React UI component library with Tailwind CSS, TypeScript, and FontAwesome 5. Includes forms, layouts, themes, and templates for rapid development.",
   "keywords": [
     "react",
     "ui",
     "components",
     "tailwind",
-    "typescript"
+    "typescript",
+    "forms",
+    "login",
+    "registration",
+    "contact-forms",
+    "dashboard",
+    "layout",
+    "themes",
+    "fontawesome",
+    "accessibility",
+    "responsive",
+    "modern",
+    "design-system"
   ],
   "author": "Flysoft",
   "license": "MIT",
@@ -40,7 +52,11 @@
     "prepublishOnly": "npm run build",
     "publish:patch": "npm version patch && npm publish",
     "publish:minor": "npm version minor && npm publish",
-    "publish:major": "npm version major && npm publish"
+    "publish:major": "npm version major && npm publish",
+    "update-docs": "node scripts/update-docs.js",
+    "validate-docs": "node scripts/validate-docs.js",
+    "docs:update": "npm run update-docs",
+    "docs:validate": "npm run validate-docs"
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
