--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -23,5 +23,11 @@
     "esModuleInterop": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "src/docs/**"
+  ]
 }
