--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "react-router-dom": "^6.30.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "typescript": "~5.8.3",
