--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "README.md"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5189 --strictPort",
     "build": "vite build && tsc -p tsconfig.lib.json",
     "build:types": "tsc -p tsconfig.lib.json --emitDeclarationOnly",
     "preview": "vite preview",
