--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0",
+    "dayjs": "^1.11.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
@@ -78,12 +79,14 @@
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "dayjs": "^1.11.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.69.0",
     "react-router-dom": "^6.30.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
