--- a/package.json
+++ b/package.json
@@ -63,13 +63,14 @@
     "docs:validate": "npm run validate-docs"
   },
   "peerDependencies": {
+    "dayjs": "^1.11.0",
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0",
-    "dayjs": "^1.11.0"
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.13.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
